2008-09-29  Stanislas Rolland  <typo3@sjbr.ca>

	* Follow-up to issue #9375: Add DTD to htmlArea RTE iframe document

2008-09-28  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #8518: Wrong JavaScript inclusion in t3lib_TCEforms
	* Fixed bug #9335: Internal caching in t3lib_pageSelect::getRootLine() has no effect

2008-09-27  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #9412: config.absRefPrefix can force wrong URL when linking across domains

2008-09-26  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #9386: Acronym plugin encoding problem

2008-09-25  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed issue #9429: htmlArea RTE: Cleanup unused files

2008-09-24  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed issue #9424: htmlArea RTE: Cleanup dialogue windows

2008-09-23  Martin Kutschker  <masi@typo3.org>

	* Fixed bug #9411: Editors cannot create new translations of pages

2008-09-22  Jeff Segars  <jeff@webempoweredchurch.org>

	* Fixed bug #9401: Use debug() for sqlDebug (thanks to Steffen Kamper)

2008-09-21  Jeff Segars  <jeff@webempoweredchurch.org>

	* Fixed bug #8719: File upload ends up in parse_url error on Windows (thanks to Steffen Kamper)

2008-09-21  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #9404: htmlArea RTE: Cleaning out deprecated extension variables

2008-09-21  Benjamin Mack  <benni@typo3.org>

	* Followup to #9393: Small code cleanup in class.t3lib_treeview.php
	* Fixed bug #8578: Umlauts get displayed wrong in Web>Access module after updating rights (Thanks to Tobias Liebig and Susanne Moog)

2008-09-20  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #9384: FE session hijacking

2008-09-19  Benjamin Mack  <benni@typo3.org>

	* Fixed bug #9393: Cosmetic Code Cleanup for the cms sysext

2008-09-18  Martin Kutschker  <masi@typo3.org>

	* Followup to bugfix #8950: clean up code
	* Fix bug #8588: Admin tools -> User Admin -> List users online broken when [BE][lockIP] is set to < 4

2008-09-18  Stanislas Rolland  <typo3@sjbr.ca>
