@@ -1,6 +1,7 @@
 2008-09-29  Stanislas Rolland  <typo3@sjbr.ca>
 
 	* Follow-up to issue #9375: Add DTD to htmlArea RTE iframe document
+	* Fixed bug 9449: htmlArea RTE: Opera sometimes raises a JavaScript error when the RTE closes
 
 2008-09-26  Stanislas Rolland  <typo3@sjbr.ca>
 
